# DesignPatterns

./: .gitignore  CMakeLists.txt  README.md
Part_1/: CMakeLists.txt  设计模式简介.md
Part_1/test_1/: Shape.h  main.cpp
TemplateMethodPattern/: CMakeLists.txt
TemplateMethodPattern/test_1/: Application.h  Library.h  main.cpp
TemplateMethodPattern/test_2/: GreatApplication.h  GreatLibrary.h  main2.cpp
common/: ErrorCode.h
